--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,19 @@ apply plugin: 'com.android.application'
 apply plugin: 'de.undercouch.download'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 30
+    buildToolsVersion '30.0.3'
     defaultConfig {
         applicationId "org.tensorflow.lite.examples.detection"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters 'armeabi-v7a', 'x86'
+        }
     }
     buildTypes {
         release {
@@ -55,6 +58,7 @@ project.ext.TMP_DIR   = project.buildDir.toString() + '/downloads'
 // apply from:'download_model.gradle'
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
@@ -68,4 +72,20 @@ dependencies {
     androidTestImplementation 'com.google.truth:truth:1.0.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
+
+    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
+    //unity
+    //testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //implementation(name: 'VuforiaWrapper', ext:'aar')
+    implementation files('libs/unity-classes.jar')
+    testImplementation 'junit:junit:4.13.2'
+}
+allprojects {
+    repositories {
+
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
