--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/tfe_od_app_name"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.ObjectDetection">
 
         <activity
-            android:name=".DetectorActivity"
-            android:label="@string/tfe_od_app_name"
+            android:name=".MainActivity"
+            android:label="@string/game_view_content_description"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,5 +26,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".DetectorActivity"/>
+        <activity android:name=".UnityPlayerActivity"/>
+        <activity android:name=".MenuActivity"/>
+        <activity android:name=".CardActivity"/>
     </application>
 </manifest>
