--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-rootProject.name = 'TFLite Object Detection Demo App'
+rootProject.name = 'Tensorflow lite & AR Final'
 include ':app', ':lib_interpreter', ':lib_task_api'
